add tabel hover event to page

--- a/web/index.html
+++ b/web/index.html
@@ -1295,9 +1295,9 @@
 
             </div>
 
-            <div style="width: 98vw; height: 70vh; border: 2px solid black;position: relative; top: 90px;right: 0;bottom: 0;left: 0;margin: auto">
+            <div style="width: 98vw; height: 70vh;position: relative; top: 90px;right: 0;bottom: 0;left: 0;margin: auto">
 
-                <table class="table align-middle mb-0 bg-white table-responsive ">
+                <table class="table align-middle mb-0 bg-white table-responsive table table-hover">
                     <thead class="bg-light">
                     <tr>
                         <th>Car Id</th>
@@ -1852,9 +1852,9 @@
 
             </div>
 
-            <div style="width: 90vw; height: 70vh; border: 2px solid black;position: relative; top: 90px;right: 0;bottom: 0;left: 0;margin: auto">
+            <div style="width: 90vw; height: 70vh;position: relative; top: 90px;right: 0;bottom: 0;left: 0;margin: auto">
 
-                <table class="table align-middle mb-0 bg-white table-responsive table table-hover text-nowrap">
+                <table class="table align-middle mb-0 bg-white table-responsive table table-hover">
                     <thead class="bg-light">
                     <tr>
                         <th>Driver Id</th>
@@ -2081,9 +2081,9 @@
 
             </div>
 
-            <div style="width: 90vw; height: 70vh; border: 2px solid black;position: relative; top: 90px;right: 0;bottom: 0;left: 0;margin: auto">
+            <div style="width: 90vw; height: 70vh;position: relative; top: 90px;right: 0;bottom: 0;left: 0;margin: auto">
 
-                <table class="table align-middle mb-0 bg-white table-responsive">
+                <table class="table align-middle mb-0 bg-white table-responsive table table-hover">
                     <thead class="bg-light">
                     <tr>
                         <th>Registered Date</th>
@@ -2262,9 +2262,9 @@
 
             </div>
 
-            <div style="width: 90vw; height: 70vh; border: 2px solid black;position: relative; top: 67px;right: 0;bottom: 0;left: 0;margin: auto">
+            <div style="width: 90vw; height: 70vh;position: relative; top: 67px;right: 0;bottom: 0;left: 0;margin: auto">
 
-                <table class="table align-middle mb-0 bg-white table-responsive table table-hover text-nowrap">
+                <table class="table align-middle mb-0 bg-white table-responsive table table-hover">
                     <thead class="bg-light">
                     <tr>
                         <th>Reserve Date</th>
@@ -2668,9 +2668,9 @@
                 </h1>
             </div>
 
-            <div style="width: 90vw; height: 70vh; border: 2px solid black;position: relative; top: 90px;right: 0;bottom: 0;left: 0;margin: auto">
+            <div style="width: 90vw; height: 70vh;position: relative; top: 90px;right: 0;bottom: 0;left: 0;margin: auto">
 
-                <table class="table align-middle mb-0 bg-white table-responsive table table-hover text-nowrap">
+                <table class="table align-middle mb-0 bg-white table-responsive table table-hover">
                     <thead class="bg-light">
                     <tr>
                         <th>Schedule Id</th>
@@ -2820,9 +2820,9 @@
                 </h1>
             </div>
 
-            <div style="width: 90vw; height: 70vh; border: 2px solid black;position: relative; top: 90px;right: 0;bottom: 0;left: 0;margin: auto">
+            <div style="width: 90vw; height: 70vh;position: relative; top: 90px;right: 0;bottom: 0;left: 0;margin: auto">
 
-                <table class="table align-middle mb-0 bg-white table-responsive table table-hover text-nowrap">
+                <table class="table align-middle mb-0 bg-white table-responsive table table-hover ">
                     <thead class="bg-light">
                     <tr>
                         <th>Payment Id</th>
@@ -3208,9 +3208,9 @@
             </div>
         </div>-->
 
-        <div style="width: 90vw; height: 60vh; border: 2px solid black;position: relative; top: 140px;right: 0;bottom: 0;left: 0;margin: auto">
+        <div style="width: 90vw; height: 60vh;position: relative; top: 140px;right: 0;bottom: 0;left: 0;margin: auto">
 
-            <table class="table align-middle mb-0 bg-white table-responsive table table-hover text-nowrap">
+            <table class="table align-middle mb-0 bg-white table-responsive table table-hover ">
                 <thead class="bg-light">
                 <tr>
                     <th>Reserve Id</th>
