complete dashboard admin

--- a/web/index.html
+++ b/web/index.html
@@ -4164,7 +4164,7 @@
     </section>
 
     <!--Income Page-->
-    <!--<section id="IncomePage" style="width: 100%; height: 100vh ;background-color: white">
+    <section id="IncomePage" style="width: 100%; height: 100vh ;background-color: white">
 
         <div>
 
@@ -4205,28 +4205,6 @@
                 </div>
             </div>
         </div>
-
-        &lt;!&ndash;<div class="row w-75">
-            <div class="col w-25 ">
-                <div class="container ">
-                    <label style="font-size: 15px" for="pickUpDate" class="text-white">When will I pickup you </label>
-                    <div class="input-group date" style="width: 250px">
-                        <input type="text" id="pickUpDate" class="form-control" placeholder="Pickup date">
-                        <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col w-25 ">
-                <div class="container ">
-                    <label style="font-size: 15px" for="pickUpDate" class="text-white">When will I pickup you </label>
-                    <div class="input-group date" style="width: 250px">
-                        <input type="text" id="pickUpDate" class="form-control" placeholder="Pickup date">
-                        <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
-                    </div>
-                </div>
-            </div>
-        </div>&ndash;&gt;
 
         <div style="width: 90vw; height: 60vh;position: relative; top: 140px;right: 0;bottom: 0;left: 0;margin: auto">
 
@@ -4317,223 +4295,9 @@
 
         </div>
     </section>
--->
+
     <!--Admin Panel-->
-    <section id="AdminPanel" style="width: 100%; height: 100vh ;background-color: #bacbe6">
-
-        <!-- Button trigger modal -->
-        <!--<button type="button" class="btn btn-primary" data-mdb-toggle="modal" data-mdb-target="#staticBackdrop">
-            Launch static backdrop modal
-        </button>
-
-        &lt;!&ndash; Modal &ndash;&gt;
-        <div
-                class="modal "
-                id="staticBackdrop"
-                data-mdb-backdrop="static"
-                data-mdb-keyboard="false"
-                tabindex="-1"
-                aria-labelledby="staticBackdropLabel"
-                aria-hidden="true"
-        >
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
-                        <button type="button" class="btn-close" data-mdb-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">...</div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-mdb-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary">Understood</button>
-                    </div>
-                </div>
-            </div>
-        </div>-->
-
-       <!-- <header>
-            &lt;!&ndash; Navbar &ndash;&gt;
-            <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
-                <div class="container-fluid">
-                    <button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarExample01" aria-controls="navbarExample01" aria-expanded="false" aria-label="Toggle navigation">
-                        <i class="fas fa-bars"></i>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarExample01">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item active">
-                                <a class="nav-link" aria-current="page" href="#">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Features</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Pricing</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">About</a>
-                            </li>
-                        </ul>
-
-                        <ul class="navbar-nav flex-row justify-content-end">
-                            <li class="nav-item me-3 me-lg-1">
-                                <a class="nav-link d-sm-flex align-items-sm-center" href="#">
-                                    <img src="https://mdbcdn.b-cdn.net/img/new/avatars/1.webp" class="rounded-circle" height="22" alt="Black and White Portrait of a Man" loading="lazy"/>
-                                    <strong class="d-none d-sm-block ms-1">John</strong>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-            &lt;!&ndash; Navbar &ndash;&gt;
-
-            &lt;!&ndash; Jumbotron &ndash;&gt;
-            <div class="p-5 text-center bg-light" style="margin-top: 58px;">
-                <h1 class="mb-3">Heading</h1>
-                <h4 class="mb-3">Subheading</h4>
-                <a class="btn btn-primary" href="" role="button">Call to action</a>
-            </div>
-            &lt;!&ndash; Jumbotron &ndash;&gt;
-
-        </header>-->
-
-       <!--<div class="container-fluid">
-           <div class="row">
-               <div class="col-3">
-                   &lt;!&ndash; Tab navs &ndash;&gt;
-                   <div
-                           class="nav flex-column nav-pills text-center"
-                           id="v-pills-tab"
-                           role="tablist"
-                           aria-orientation="vertical"
-                   >
-                       <a
-                               class="nav-link active"
-                               id="v-pills-home-tab"
-                               data-mdb-toggle="pill"
-                               href="#v-pills-home"
-                               role="tab"
-                               aria-controls="v-pills-home"
-                               aria-selected="true"
-                       >Home</a
-                       >
-                       <a
-                               class="nav-link"
-                               id="v-pills-profile-tab"
-                               data-mdb-toggle="pill"
-                               href="#v-pills-profile"
-                               role="tab"
-                               aria-controls="v-pills-profile"
-                               aria-selected="false"
-                       >Profile</a
-                       >
-                       <a
-                               class="nav-link"
-                               id="v-pills-messages-tab"
-                               data-mdb-toggle="pill"
-                               href="#v-pills-messages"
-                               role="tab"
-                               aria-controls="v-pills-messages"
-                               aria-selected="false"
-                       >Messages</a
-                       >
-                   </div>
-                   &lt;!&ndash; Tab navs &ndash;&gt;
-               </div>
-
-               <div class="col-9">
-                   &lt;!&ndash; Tab content &ndash;&gt;
-                   <div class="tab-content" id="v-pills-tabContent">
-                       <div
-                               class="tab-pane fade show active"
-                               id="v-pills-home"
-                               role="tabpanel"
-                               aria-labelledby="v-pills-home-tab"
-                       >
-                           Home content
-                       </div>
-                       <div
-                               class="tab-pane fade"
-                               id="v-pills-profile"
-                               role="tabpanel"
-                               aria-labelledby="v-pills-profile-tab"
-                       >
-                           Profile content
-                       </div>
-                       <div
-                               class="tab-pane fade"
-                               id="v-pills-messages"
-                               role="tabpanel"
-                               aria-labelledby="v-pills-messages-tab"
-                       >
-                           Messages content
-                       </div>
-                   </div>
-                   &lt;!&ndash; Tab content &ndash;&gt;
-               </div>
-           </div>
-       </div>
-
-        &lt;!&ndash; Tabs navs &ndash;&gt;
-        <ul class="nav nav-tabs mb-3" id="ex1" role="tablist">
-            <li class="nav-item" role="presentation">
-                <a
-                        class="nav-link active"
-                        id="ex1-tab-1"
-                        data-mdb-toggle="tab"
-                        href="#ex1-tabs-1"
-                        role="tab"
-                        aria-controls="ex1-tabs-1"
-                        aria-selected="true"
-                >Tab 1</a
-                >
-            </li>
-            <li class="nav-item" role="presentation">
-                <a
-                        class="nav-link"
-                        id="ex1-tab-2"
-                        data-mdb-toggle="tab"
-                        href="#ex1-tabs-2"
-                        role="tab"
-                        aria-controls="ex1-tabs-2"
-                        aria-selected="false"
-                >Tab 2</a
-                >
-            </li>
-            <li class="nav-item" role="presentation">
-                <a
-                        class="nav-link"
-                        id="ex1-tab-3"
-                        data-mdb-toggle="tab"
-                        href="#ex1-tabs-3"
-                        role="tab"
-                        aria-controls="ex1-tabs-3"
-                        aria-selected="false"
-                >Tab 3</a
-                >
-            </li>
-        </ul>
-        &lt;!&ndash; Tabs navs &ndash;&gt;
-
-        &lt;!&ndash; Tabs content &ndash;&gt;
-        <div class="tab-content" id="ex1-content">
-            <div
-                    class="tab-pane fade show active"
-                    id="ex1-tabs-1"
-                    role="tabpanel"
-                    aria-labelledby="ex1-tab-1"
-            >
-                Tab 1 content
-            </div>
-            <div class="tab-pane fade" id="ex1-tabs-2" role="tabpanel" aria-labelledby="ex1-tab-2">
-                Tab 2 content
-            </div>
-            <div class="tab-pane fade" id="ex1-tabs-3" role="tabpanel" aria-labelledby="ex1-tab-3">
-                Tab 3 content
-            </div>
-        </div>
-        &lt;!&ndash; Tabs content &ndash;&gt;
--->
+    <section id="AdminPanel" style="width: 100%; height: 100vh ;background-color: white">
 
         <!-- Navbar-->
         <nav class="navbar navbar-expand-lg navbar-light" style="background-image: radial-gradient(circle at top,#373b3e,#000);">
@@ -4674,36 +4438,44 @@
 
         </div>
 
-        <div class="bg-warning float-end" style="width: 80% ;height: 80vh;position: relative;top: -700px">
+        <div class="float-end" style="width: 80% ;height: 80vh;position: relative;top: -700px">
             <div class="container">
 
                 <div class="row w-100 mb-5" style="height: 25%;">
-                    <div class="col ms-5 me-5 mb-5 border-2 border-light img-thumbnail img-responsive shadow">
-                        <img src="assets/images/photo-1494976388531-d1058494cdd8.jpg" class="img-fluid hover-shadow center-block" alt="" style="width: 200px;height: 200px">
+                    <div class="col ms-5 me-5 mb-5 border-2 border-light img-thumbnail img-responsive shadow" style="background-image: radial-gradient(circle at top,#f5c2c7,#d63384);">
+                        <h2 class="fw-bold text-center">Registered Users</h2>
+                        <h1 class="fw-bold text-center text-primary">10</h1>
                     </div>
-                    <div class="col ms-5 me-5 mb-5 border-2 border-light img-thumbnail img-responsive shadow">
-                        <img src="assets/images/1200x-1.jpg" class="img-fluid hover-shadow center-block" alt="" style="width: 200px;height: 200px">
+                    <div class="col ms-5 me-5 mb-5 border-2 border-light img-thumbnail img-responsive shadow" style="background-image: radial-gradient(circle at top,#c7dbd2,#198754);">
+                        <h2 class="fw-bold text-center">Total Bookings</h2>
+                        <h1 class="fw-bold text-center text-primary">20</h1>
                     </div>
-                    <div class="col ms-5 me-5 mb-5 border-2 border-light img-thumbnail img-responsive shadow">
-                        <img src="assets/images/Koenigsegg%20Gemera_01%20copy.jpg" class="img-fluid hover-shadow center-block" alt="" style="width: 200px;height: 200px">
+                    <div class="col ms-5 me-5 mb-5 border-2 border-light img-thumbnail img-responsive shadow" style="background-image: radial-gradient(circle at top,#ffcd39,#fd7e14);">
+                        <h2 class="fw-bold text-center">Available Cars</h2>
+                        <h1 class="fw-bold text-center text-primary">32</h1>
                     </div>
-                    <div class="col ms-5 me-5 mb-5 border-2 border-light img-thumbnail img-responsive shadow">
-                        <img src="assets/images/download%20(1).gif" class="img-fluid hover-shadow center-block" alt="" style="width: 200px;height: 200px">
+                    <div class="col ms-5 me-5 mb-5 border-2 border-light img-thumbnail img-responsive shadow" style="background-image: radial-gradient(circle at top,orchid,#6f42c1);">
+                        <h2 class="fw-bold text-center">Reserved Cars</h2>
+                        <h1 class="fw-bold text-center text-primary">20</h1>
                     </div>
                 </div>
 
                 <div class="row w-100" style="height: 25%;position: relative;top: 10px;">
-                    <div class="col ms-5 me-5 mb-5 border-2 border-light img-thumbnail img-responsive shadow">
-                        <img src="assets/images/download%20(1).gif" class="img-fluid hover-shadow center-block" alt="" style="width: 200px;height: 200px">
+                    <div class="col ms-5 me-5 mb-5 border-2 border-light img-thumbnail img-responsive shadow" style="background-image: radial-gradient(circle at top,#e5c7ca,#dc3545);">
+                        <h2 class="fw-bold text-center">Available Drivers</h2>
+                        <h1 class="fw-bold text-center text-primary">10</h1>
                     </div>
-                    <div class="col ms-5 me-5 mb-5 border-2 border-light img-thumbnail img-responsive shadow">
-                        <img src="assets/images/Koenigsegg%20Gemera_01%20copy.jpg" class="img-fluid hover-shadow center-block" alt="" style="width: 200px;height: 200px">
+                    <div class="col ms-5 me-5 mb-5 border-2 border-light img-thumbnail img-responsive shadow" style="background-image: radial-gradient(circle at top,#bacbe6,#6f42c1);">
+                        <h2 class="fw-bold text-center">Occupied Drivers</h2>
+                        <h1 class="fw-bold text-center text-primary">10</h1>
                     </div>
-                    <div class="col ms-5 me-5 mb-5 border-2 border-light img-thumbnail img-responsive shadow">
-                        <img src="assets/images/1200x-1.jpg" class="img-fluid hover-shadow center-block" alt="" style="width: 200px;height: 200px">
+                    <div class="col ms-5 me-5 mb-5 border-2 border-light img-thumbnail img-responsive shadow" style="background-image: radial-gradient(circle at top,#f2e7c3,yellow);">
+                        <h2 class="fw-bold text-center">Maintained Cars</h2>
+                        <h1 class="fw-bold text-center text-primary">10</h1>
                     </div>
-                    <div class="col ms-5 me-5 mb-5 border-2 border-light img-thumbnail img-responsive shadow">
-                        <img src="assets/images/photo-1494976388531-d1058494cdd8.jpg" class="img-fluid hover-shadow center-block" alt="" style="width: 200px;height: 200px">
+                    <div class="col ms-5 me-5 mb-5 border-2 border-light img-thumbnail img-responsive shadow" style="background-image: radial-gradient(circle at top,#fcf8e3,#664d03);">
+                        <h2 class="fw-bold text-center">Under Maintained Cars</h2>
+                        <h1 class="fw-bold text-center text-primary">2</h1>
                     </div>
                 </div>
 
